--- a/index.html
+++ b/index.html
@@ -13,9 +13,74 @@
 </head>
 
 <body>
+    <!-- main Screen -->
+    <div id="screen">
+        <!-- city name  -->
+        <div class="city-name">
+            <i class="fa-solid fa-map-pin"></i>
+            <h1 id="city-name">
+                Lahore
+            </h1>
+        </div>
 
+        <!-- weather details -->
+        <div class="weather-icon-css">
+            <img class="weather-icon-css img" src="img/sun.png" alt="sun image" />
+        </div>
 
-    <!-- 9ae39c7a77da9c1ed81c530c00066323 -->
+        <div class="weather-description">
+            <div class="show-metric">0°</div>
+            <div class="weather-details">
+                <div class="">Sunnen</div>
+                <div class="h-f">
+                    <div class="show">H: <span id="">60</span>
+                    </div> ||
+                    <div>
+
+                        F: <span id=""> 60</span>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+        <!-- 5 dat forecast -->
+        <div class="forcasts-box">
+            <div class="today-forecast">
+                <h4> TODAY</h4>
+                <div class="weather-icon-today img">
+                    <img src="img/sun.png" alt="">
+                </div>
+                <div class="temp-today">
+                    <span id="">50°</span> / <span id="">50°</span>
+                    <div class="weather-main-today" id="">Sunnen</div>
+                </div>
+            </div>
+            <div class="future-forecast">
+                <h5>6-DAYS FORECAST</h5>
+                <div id="future-forecast-box"></div>
+            </div>
+        </div>
+        <nav>
+            <ul>
+                <li>
+                    <a class="active" href="index.html">
+                        <i class="fa-solid fa-location-arrow"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="search.html">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="world.html"><i class="fa-solid fa-earth-americas"></i></a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+
+    <!-- let key = 9ae39c7a77da9c1ed81c530c00066323 -->
 </body>
 
 </html>
