--- a/search.html
+++ b/search.html
@@ -14,6 +14,23 @@
 
 <body>
 
+    <nav>
+        <ul>
+            <li>
+                <a href="index.html">
+                    <i class="fa-solid fa-location-arrow"></i>
+                </a>
+            </li>
+            <li>
+                <a class="active" href="search.html">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </a>
+            </li>
+            <li>
+                <a href="world.html"><i class="fa-solid fa-earth-americas"></i></a>
+            </li>
+        </ul>
+    </nav>
 </body>
 
 </html>
