--- a/search.html
+++ b/search.html
@@ -13,24 +13,45 @@
 </head>
 
 <body>
+    <div id="screen">
+        <!-- main section  -->
+        <h3>Search For City</h3>
+        <!-- search section -->
+        <div class="search">
+            <div class="search-icon">
+                <i class="fa-solid fa-location-dot"></i>
+            </div>
+            <input type="text" name="" id="" placeholder="Search...">
+        </div>
+        <!-- message -->
+        <div class="message">
+            <p> You have the option to search by city , state or country names</p>
+        </div>
+        <!-- error message -->
+        <div class="error-message">
+            <p>One of the specified locations (city ,state or country not found )</p>
+        </div>
+        <!-- weather -->
 
-    <nav>
-        <ul>
-            <li>
-                <a href="index.html">
-                    <i class="fa-solid fa-location-arrow"></i>
-                </a>
-            </li>
-            <li>
-                <a class="active" href="search.html">
-                    <i class="fa-solid fa-magnifying-glass"></i>
-                </a>
-            </li>
-            <li>
-                <a href="world.html"><i class="fa-solid fa-earth-americas"></i></a>
-            </li>
-        </ul>
-    </nav>
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html">
+                        <i class="fa-solid fa-location-arrow"></i>
+                    </a>
+                </li>
+                <li>
+                    <a class="active" href="search.html">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="world.html"><i class="fa-solid fa-earth-americas"></i></a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+
 </body>
 
 </html>
