world screen ui finished

--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
     </div>
 
     <!-- let key = 9ae39c7a77da9c1ed81c530c00066323 -->
+    <script src="js/main.js"></script>
+
 </body>
 
 </html>
