--- a/index.html
+++ b/index.html
@@ -13,65 +13,58 @@
 </head>
 
 <body>
-    <!-- main Screen -->
+    <!-- main section -->
     <div id="screen">
-        <!-- city name  -->
+        <!-- city name -->
         <div class="city-name">
             <i class="fa-solid fa-map-pin"></i>
-            <h1 id="city-name">
-                Lahore
-            </h1>
+            <h1 id="city-name">Mumbai</h1>
         </div>
-
-        <!-- weather details -->
+        <!-- weather icon -->
         <div class="weather-icon-css">
-            <img class="weather-icon-css img" src="img/sun.png" alt="sun image" />
+            <img class="weather-icon" src="img/sun.png" />
         </div>
-
+        <!-- weather details -->
         <div class="weather-description">
-            <div class="show-metric">0°</div>
+            <div class="show-metric" id="metric">0°</div>
             <div class="weather-details">
-                <div class="">Sunnen</div>
+                <div class="weather-main" id="weather-main">Sunnen</div>
                 <div class="h-f">
-                    <div class="show">H: <span id="">60</span>
-                    </div> ||
-                    <div>
-
-                        F: <span id=""> 60</span>
+                    <div class="show-humidity">H: <span id="humidity">60</span></div>
+                    ||
+                    <div class="show-humidity">
+                        F: <span id="feels-like">60</span>
                     </div>
-
                 </div>
             </div>
         </div>
-
-        <!-- 5 dat forecast -->
+        <!-- Today-forecast -->
         <div class="forcasts-box">
             <div class="today-forecast">
-                <h4> TODAY</h4>
-                <div class="weather-icon-today img">
-                    <img src="img/sun.png" alt="">
+                <h4>TODAY</h4>
+                <div class="weather-icon-today">
+                    <img class="weather-icons" src="img/sun.png" />
                 </div>
                 <div class="temp-today">
-                    <span id="">50°</span> / <span id="">50°</span>
-                    <div class="weather-main-today" id="">Sunnen</div>
+                    <span id="temp-min-today">50°</span><span>/ </span><span id="temp-max-today">55°</span>
                 </div>
+                <div class="weather-main-today" id="weather-main">Sunnen</div>
             </div>
+
+            <!-- 5day Forecast -->
             <div class="future-forecast">
                 <h5>6-DAYS FORECAST</h5>
                 <div id="future-forecast-box"></div>
             </div>
         </div>
+        <!-- nav section -->
         <nav>
             <ul>
                 <li>
-                    <a class="active" href="index.html">
-                        <i class="fa-solid fa-location-arrow"></i>
-                    </a>
+                    <a class="active" href="index.html"><i class="fa-solid fa-location-arrow"></i></a>
                 </li>
                 <li>
-                    <a href="search.html">
-                        <i class="fa-solid fa-magnifying-glass"></i>
-                    </a>
+                    <a href="search.html"><i class="fa-solid fa-magnifying-glass"></i></a>
                 </li>
                 <li>
                     <a href="world.html"><i class="fa-solid fa-earth-americas"></i></a>
@@ -79,10 +72,8 @@
             </ul>
         </nav>
     </div>
-
-    <!-- let key = 9ae39c7a77da9c1ed81c530c00066323 -->
+    <!-- script -->
     <script src="js/main.js"></script>
-
 </body>
 
 </html>
